fix issues with modal on mobile

--- a/web/wp-content/plugins/sessionize-blocks/blocks/sessionize-speakers/src/style.css
+++ b/web/wp-content/plugins/sessionize-blocks/blocks/sessionize-speakers/src/style.css
@@ -315,10 +315,11 @@
 }
 
 .sz-modal__scroll {
+	flex: 1 1 auto;
+	min-height: 0;
 	overflow: auto;
 	overscroll-behavior: contain;
 	-webkit-overflow-scrolling: touch;
-	max-height: calc(var(--sz-vvh) - (var(--sz-modal-top-offset) * 2));
 	scroll-behavior: auto;
 }
 
